--- a/mantis_tests/mantis_tests.csproj
+++ b/mantis_tests/mantis_tests.csproj
@@ -76,13 +76,19 @@
     <Compile Include="appmanager\FtpHelper.cs" />
     <Compile Include="appmanager\HelperBase.cs" />
     <Compile Include="appmanager\JamesHelper.cs" />
+    <Compile Include="appmanager\LoginHelper.cs" />
     <Compile Include="appmanager\MailHelper.cs" />
+    <Compile Include="appmanager\ManagmentMenuHelper.cs" />
+    <Compile Include="appmanager\ProjectHelper.cs" />
     <Compile Include="appmanager\RegistrationHelper.cs" />
     <Compile Include="appmanager\TelnetInterface.cs" />
     <Compile Include="model\AccountData.cs" />
+    <Compile Include="model\ProjectData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="tests\TestBase.cs" />
     <Compile Include="tests\AccountCreationTests.cs" />
+    <Compile Include="tests\ProjectCreationTests.cs" />
+    <Compile Include="tests\ProjectDeleteTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="config_inc.php">
