--- a/mantis_tests/packages.config
+++ b/mantis_tests/packages.config
@@ -7,5 +7,7 @@
   <package id="OpaqueMail" version="2.4.3" targetFramework="net452" />
   <package id="Selenium.Support" version="2.53.1" targetFramework="net452" />
   <package id="Selenium.WebDriver" version="2.53.1" targetFramework="net452" />
+  <package id="SimpleBrowser" version="0.5.61.0" targetFramework="net452" />
+  <package id="SimpleBrowser.WebDriver" version="0.5.37" targetFramework="net452" />
   <package id="System.Net.FtpClient" version="1.0.5824.34026" targetFramework="net452" />
 </packages>
